--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,14 +10,14 @@ import layout3 from "../assets/images/04-layout3.png";
 import layout4 from "../assets/images/04-layout4.png";
 ---
 
-<MainLayout title="Sammensætning af plakatvæg">
+<MainLayout title="Palads Biograf">
   <article class="grid mx-auto container gap-8 pt-8 prose">
     <h1>Fire gode steps til at sammensætte en plakatvæg</h1>
 
     <h2>1) Overvej hvordan farverne passer sammen</h2>
 
     <p>
-      Overvej hvilket udtryk du gerne vil udtrykke med din plakatvæg. Skal det
+       hvilket udtryk du gerne vil udtrykke med din plakatvæg. Skal det
       være ren sort/hvid plakat væg? Eller en blanding af sort/hvid plakater og
       få plakater med farver? Det kan også være en samling af plakater i samme
       farvetoner eller en vild farvelade med mange farver.
