--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,113 +12,43 @@ import layout4 from "../assets/images/04-layout4.png";
 
 <MainLayout title="Palads Biograf">
   <article class="grid mx-auto container gap-8 pt-8 prose">
-    <h1>Fire gode steps til at sammensætte en plakatvæg</h1>
+    <h1>Palads Biograf</h1>
 
-    <h2>1) Overvej hvordan farverne passer sammen</h2>
+    <h2>Danmarks største biograf med 17 sale og 2.100 sæder</h2>
 
     <p>
-       hvilket udtryk du gerne vil udtrykke med din plakatvæg. Skal det
-      være ren sort/hvid plakat væg? Eller en blanding af sort/hvid plakater og
-      få plakater med farver? Det kan også være en samling af plakater i samme
-      farvetoner eller en vild farvelade med mange farver.
+      Palads byder på Københavns største udvalg af film til alle aldersgrupper. Biografen emmer af historie, men er ikke faldet af på teknikken af den grund. Biografen er fuldt digitaliseret med 4K og 2K projektorer.
     </p>
 
+    <h2>Københavns ældste biograf</h2>
+
+    <p>
+      Med sine mere end 100 år er Palads Københavns ældste biograf og den danner i dag rammen om et varieret udbud af film samt særarrangementer, maratonvisninger, snig- og forpremierer. Senest er den historiske foyer nænsomt blevet bygget om, så bygningens loft og søjler atter har fået luft omkring sig og foyeren fremstår rummelig som ’i gamle dage’.
+    </p>
+
+    <h2>Hurtig info om Palads</h2>
+
     <ul>
-      <li>Vær bevidst om hvilke farver du sammensætter til plakatvæggen.</li>
       <li>
-        Når man beslutter sig for farvertoner til plakatvæggen kan det også være
-        kan det være en god ide at kigge på de omgivelser vægen er en sammenhæng
-        med.
+        <strong>Beliggenhed:</strong> Palads Biograf ligger på Axeltorv 9 i København, tæt på Tivoli og Rådhuspladsen. Den centrale placering gør det nemt tilgængeligt for besøgende fra hele byen.
       </li>
+      <strong>Faciliteter:</strong> Udover de 17 sale og 2.100 sæder tilbyder Palads Biograf moderne faciliteter og komfortable siddepladser. Der er også mulighed for at købe snacks og drikkevarer i biografens foyer.
+    </li>
+    <strong>Program:</strong> Palads Biograf har et bredt udvalg af film til alle aldersgrupper. Du kan forvente at finde alt fra de nyeste Hollywood-blockbusters til uafhængige, internationale film. Derudover arrangerer biografen også forskellige events som særvisninger, maratonvisninger og forpremierer.
+  </li>
+  <strong>Historie:</strong> Som nævnt er Palads Biograf en af Københavns ældste biografer med en historie, der strækker sig over mere end 100 år. Denne historiske arv giver biografen en særlig charme og atmosfære, som mange besøgende værdsætter.
+</li>
+<strong>Renoveringer:</strong> Palads Biograf har gennemgået flere renoveringer gennem årene for at holde sig opdateret med den nyeste teknologi og for at bevare den historiske charme. Senest blev den historiske foyer renoveret for at genskabe atmosfæren fra fortiden samtidig med at den blev opdateret med moderne faciliteter.
+</li>
     </ul>
+
+    <p>
+      Alt i alt er Palads Biograf ikke kun et sted for at se film, men også en del af Københavns kulturarv og en oplevelse i sig selv.
+    </p>
 
     <Image src={farver} alt="3 billeder på en væg i forskellige farver" />
 
-    <hr />
-
-    <h2>2) Hvilke motiver skal hænges på væggen?</h2>
-
-    <p>
-      Ligesom farverne er motiverne på plakaterne også med til at skabe et
-      bestemt udtryk. Skal de være ensartede eller skal der være kontraster når
-      øjet ser væggen? Og kan nogle motiver være med til at skabe en
-      overraskelse når man betragter væggen.
-    </p>
-
-    <ul>
-      <li>
-        Hvis man har mange forskellige motiver kan det være en god ide at
-        gruppere, så nogle af billederne taler sammen.
-      </li>
-      <li>
-        Det kan også være en god ide at sammensætte motiver med stor kontrast,
-        da de på den måde kan fremhæve hinanden.
-      </li>
-    </ul>
-
     <Image src={motiver} alt="Forskellige motiver på tre billeder på en væg" />
-
-    <hr />
-
-    <h2>3) Motiver i forskellige størrelser og formater</h2>
-
-    <p>
-      Overvej hvilken størrelse billeder du skal bruge til din væg. Er der mange
-      forskellige formater der skal passes ind i layoutet eller vil du have
-      præcis de samme to formater?
-    </p>
-
-    <p>
-      Flere formater og både bred og højformat skaber ofte et dynamisk udtryk,
-      der kan være spændende at gå på opdagelse i. Udfordringen med denne slags
-      layout er at det ofte bliver meget rodet, og derfor kan det være en fordel
-      at følge nogle principper der kan hjælpe med at skabe ro. Det kan også
-      være indbydende for øjet bare at gentage den samme størrelse, - på den
-      måde kan motivet også komme mere til sin ret.
-    </p>
-    <ul>
-      <li>
-        Udvælg formater til din billedvæg. både plakater i forskellige
-        størrelser, høj- og bred-format
-      </li>
-      <li>
-        Vælger man at gentage det samme format kan man eks. bryde layoutet ved
-        at tage et eller to billeder ud.
-      </li>
-    </ul>
-    <Image
-      src={strl}
-      alt="Forskellige størrelser af billeder på en billedvæg"
-    />
-
-    <hr />
-    <h2>4) Layout af en spændende billedvæg</h2>
-
-    <p>
-      At layoute en billedvæg med flere billeder er en svær øvelse. Er der er
-      mange eller få billeder? Hvilke farver, hvilke motiver og hvilke
-      størrelser skal sættes sammen som en enhed?
-    </p>
-
-    <p>
-      Man kan bruge forskellige metoder til at skabe et fedt udtryk. Her er
-      nogle du kan overveje at bruge hvis du har mange billeder. Hvis du har
-      billederne i fysisk form, så start med at lave layoutet på gulvet, stil
-      dig op på en stol og tag et billede når du er tilfreds med første udkast.
-      Lav denne øvelser et par gange før du begynder at hænge dem op på væggen.
-    </p>
-
-    <ul>
-      <li>Anvend linjer der flugter på forskellige måder.</li>
-      <li>
-        Arbejd med at have den samme afstand mellem rammerne. Kan man have den
-        sammen afstand giver det ro.
-      </li>
-      <li>
-        Man kan også arbejde med at placere billederne lidt abstrakt på væggen.
-        Det kan skabe et mere livligt og overraskende look.
-      </li>
-    </ul>
 
     <div class="grid grid-cols-2 gap-4">
       <Image src={layout1} alt="Forslag til en billedvæg" />
@@ -126,6 +56,35 @@ import layout4 from "../assets/images/04-layout4.png";
       <Image src={layout3} alt="Tredje forslag til en billedvæg" />
       <Image src={layout4} alt="Fjerde forslag til en billedvæg" />
     </div>
-    <hr />
+
+    <h2>Parkering</h2>
+
+    <p>
+      <strong>Parkering:</strong> Hos Q-Park Vesterport i Nyropsgade.S-tog: Vesterport station & Københavns hovedbanegård.
+    </p>
+    <p>
+      <strong>Metro:</strong> Rådhuspladsen & Københavns hovedbanegård.
+    </p>
+    <p>
+      <strong>Regionaltog:</strong> Københavns Hovedbanegård.
+    </p>
+
+    <h2>Åbningstider</h2>
+
+    <p>
+    Vi åbner 30. min før første forestilling.</p>
+    <p>
+      Mandag - søndag (samt helligdage)</p>
+
+      <h2>Adresse</h2>
+      <p>
+        Nordisk Film Biografer Palads</p>
+        <p>
+          Axeltorv 9</p>
+          <p>
+            1609 København V</p>
+            <p>
+              servicepalads@nfbio.dk</p>
+
   </article>
 </MainLayout>
