--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,10 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
 import { Image } from "astro:assets";
-import farver from "../assets/images/01-farver.png";
-import motiver from "../assets/images/02-motiver.png";
-import strl from "../assets/images/03-strl.png";
-import layout1 from "../assets/images/04-layout1.png";
-import layout2 from "../assets/images/04-layout2.png";
-import layout3 from "../assets/images/04-layout3.png";
-import layout4 from "../assets/images/04-layout4.png";
+import P1 from "../assets/images/p1.png";
+import P2 from "../assets/images/p2.png";
+import P3 from "../assets/images/p3.png";
+import P4 from "../assets/images/p4.png";
 ---
 
 <MainLayout title="Palads Biograf">
@@ -46,16 +43,11 @@ import layout4 from "../assets/images/04-layout4.png";
       Alt i alt er Palads Biograf ikke kun et sted for at se film, men også en del af Københavns kulturarv og en oplevelse i sig selv.
     </p>
 
-    <Image src={farver} alt="3 billeder på en væg i forskellige farver" />
+    <Image src={P1} alt="Aflangs billede af Palads med blå himmel" />
+    <Image src={P2} alt="Palads skævt nedefra" />
+    <Image src={P3} alt="Palads med blå himmel og reklame for film" />
+    <Image src={P4} alt="Palads set fra togperron" />
 
-    <Image src={motiver} alt="Forskellige motiver på tre billeder på en væg" />
-
-    <div class="grid grid-cols-2 gap-4">
-      <Image src={layout1} alt="Forslag til en billedvæg" />
-      <Image src={layout2} alt="Andet forslag til en billedvæg" />
-      <Image src={layout3} alt="Tredje forslag til en billedvæg" />
-      <Image src={layout4} alt="Fjerde forslag til en billedvæg" />
-    </div>
 
     <h2>Parkering</h2>
 
