--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,6 @@ import P2 from "../assets/images/p2.png";
 import P3 from "../assets/images/p3.png";
 import P4 from "../assets/images/p4.png";
 ---
-
 <MainLayout title="Palads Biograf">
   <article class="grid mx-auto container gap-8 pt-8 prose">
     <h1>Palads Biograf</h1>
@@ -26,15 +25,15 @@ import P4 from "../assets/images/p4.png";
     <h2>Hurtig info om Palads</h2>
 
     <ul>
-      <li>
+      <li class="list-none">
         <strong>Beliggenhed:</strong> Palads Biograf ligger på Axeltorv 9 i København, tæt på Tivoli og Rådhuspladsen. Den centrale placering gør det nemt tilgængeligt for besøgende fra hele byen.
-      </li>
+      </li>      <li class="list-none">
       <strong>Faciliteter:</strong> Udover de 17 sale og 2.100 sæder tilbyder Palads Biograf moderne faciliteter og komfortable siddepladser. Der er også mulighed for at købe snacks og drikkevarer i biografens foyer.
-    </li>
+    </li>      <li class="list-none">
     <strong>Program:</strong> Palads Biograf har et bredt udvalg af film til alle aldersgrupper. Du kan forvente at finde alt fra de nyeste Hollywood-blockbusters til uafhængige, internationale film. Derudover arrangerer biografen også forskellige events som særvisninger, maratonvisninger og forpremierer.
-  </li>
+  </li>      <li class="list-none">
   <strong>Historie:</strong> Som nævnt er Palads Biograf en af Københavns ældste biografer med en historie, der strækker sig over mere end 100 år. Denne historiske arv giver biografen en særlig charme og atmosfære, som mange besøgende værdsætter.
-</li>
+</li>      <li class="list-none">
 <strong>Renoveringer:</strong> Palads Biograf har gennemgået flere renoveringer gennem årene for at holde sig opdateret med den nyeste teknologi og for at bevare den historiske charme. Senest blev den historiske foyer renoveret for at genskabe atmosfæren fra fortiden samtidig med at den blev opdateret med moderne faciliteter.
 </li>
     </ul>
@@ -53,30 +52,24 @@ import P4 from "../assets/images/p4.png";
 
     <p>
       <strong>Parkering:</strong> Hos Q-Park Vesterport i Nyropsgade.S-tog: Vesterport station & Københavns hovedbanegård.
-    </p>
-    <p>
+    <br/>
       <strong>Metro:</strong> Rådhuspladsen & Københavns hovedbanegård.
-    </p>
-    <p>
+<br/>
       <strong>Regionaltog:</strong> Københavns Hovedbanegård.
     </p>
 
     <h2>Åbningstider</h2>
 
     <p>
-    Vi åbner 30. min før første forestilling.</p>
-    <p>
+    Vi åbner 30. min før første forestilling.<br/>
       Mandag - søndag (samt helligdage)</p>
 
       <h2>Adresse</h2>
       <p>
-        Nordisk Film Biografer Palads</p>
-        <p>
-          Axeltorv 9</p>
-          <p>
-            1609 København V</p>
-            <p>
-              servicepalads@nfbio.dk</p>
+        Nordisk Film Biografer Palads<br/>
+          Axeltorv 9<br/>
+            1609 København V<br/>
+              <a href="mailto:servicepalads@nfbio.dk" target="_blank">Kontakt os på mail!</a></p>
 
   </article>
 </MainLayout>
