--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -5,7 +5,6 @@ import "../styles/tailwind.css";
 import "animate.css";
 const { title } = Astro.props;
 ---
-
 <html lang="da">
   <head>
     <meta charset="utf-8" />
@@ -14,7 +13,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <meta
       name="og:description"
-      content="Info om Palads Biograf
+      content="Info om Palads Biograf"
     />
     <title>{Astro.props.title}</title>
   </head>
