--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,8 @@ import P4 from "../assets/images/p4.png";
     <h2>Københavns ældste biograf</h2>
 
     <p>
-      Med sine mere end 100 år er Palads Københavns ældste biograf og den danner i dag rammen om et varieret udbud af film samt særarrangementer, maratonvisninger, snig- og forpremierer. Senest er den historiske foyer nænsomt blevet bygget om, så bygningens loft og søjler atter har fået luft omkring sig og foyeren fremstår rummelig som ’i gamle dage’.
+      Med sine mere end 100 år er Palads Københavns ældste biograf og den danner i dag rammen om et varieret udbud af film samt særarrangementer, maratonvisninger, snig- og forpremierer.</p> 
+      <p>Senest er den historiske foyer nænsomt blevet bygget om, så bygningens loft og søjler atter har fået luft omkring sig og foyeren fremstår rummelig som ’i gamle dage’.
     </p>
 
     <h2>Hurtig info om Palads</h2>
@@ -27,13 +28,17 @@ import P4 from "../assets/images/p4.png";
     <ul>
       <li class="list-none">
         <strong>Beliggenhed:</strong> Palads Biograf ligger på Axeltorv 9 i København, tæt på Tivoli og Rådhuspladsen. Den centrale placering gør det nemt tilgængeligt for besøgende fra hele byen.
-      </li>      <li class="list-none">
+      </li><br/>
+      <li class="list-none">
       <strong>Faciliteter:</strong> Udover de 17 sale og 2.100 sæder tilbyder Palads Biograf moderne faciliteter og komfortable siddepladser. Der er også mulighed for at købe snacks og drikkevarer i biografens foyer.
-    </li>      <li class="list-none">
+    </li><br/>
+    <li class="list-none">
     <strong>Program:</strong> Palads Biograf har et bredt udvalg af film til alle aldersgrupper. Du kan forvente at finde alt fra de nyeste Hollywood-blockbusters til uafhængige, internationale film. Derudover arrangerer biografen også forskellige events som særvisninger, maratonvisninger og forpremierer.
-  </li>      <li class="list-none">
+  </li><br/>
+  <li class="list-none">
   <strong>Historie:</strong> Som nævnt er Palads Biograf en af Københavns ældste biografer med en historie, der strækker sig over mere end 100 år. Denne historiske arv giver biografen en særlig charme og atmosfære, som mange besøgende værdsætter.
-</li>      <li class="list-none">
+</li><br/>
+<li class="list-none">
 <strong>Renoveringer:</strong> Palads Biograf har gennemgået flere renoveringer gennem årene for at holde sig opdateret med den nyeste teknologi og for at bevare den historiske charme. Senest blev den historiske foyer renoveret for at genskabe atmosfæren fra fortiden samtidig med at den blev opdateret med moderne faciliteter.
 </li>
     </ul>
@@ -51,9 +56,9 @@ import P4 from "../assets/images/p4.png";
     <h2>Parkering</h2>
 
     <p>
-      <strong>Parkering:</strong> Hos Q-Park Vesterport i Nyropsgade.S-tog: Vesterport station & Københavns hovedbanegård.
+      <strong>Parkering:</strong> Hos Q-Park Vesterport i Nyropsgade.S-tog: Vesterport station & Københavns Hovedbanegård.
     <br/>
-      <strong>Metro:</strong> Rådhuspladsen & Københavns hovedbanegård.
+      <strong>Metro:</strong> Rådhuspladsen & Københavns Hovedbanegård.
 <br/>
       <strong>Regionaltog:</strong> Københavns Hovedbanegård.
     </p>
