--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
 import { Image } from "astro:assets";
-import P1 from "../assets/images/p1.png";
-import P2 from "../assets/images/p2.png";
-import P3 from "../assets/images/p3.png";
-import P4 from "../assets/images/p4.png";
+import P1 from "../assets/images/p1.jpg";
+import P2 from "../assets/images/p2.jpg";
+import P3 from "../assets/images/p3.jpg";
+import P4 from "../assets/images/p4.jpg";
 ---
 <MainLayout title="Palads Biograf">
   <article class="grid mx-auto container gap-8 pt-8 prose">
@@ -47,10 +47,10 @@ import P4 from "../assets/images/p4.png";
       Alt i alt er Palads Biograf ikke kun et sted for at se film, men også en del af Københavns kulturarv og en oplevelse i sig selv.
     </p>
 
-    <Image src={P1} alt="Aflangs billede af Palads med blå himmel" />
-    <Image src={P2} alt="Palads skævt nedefra" />
-    <Image src={P3} alt="Palads med blå himmel og reklame for film" />
-    <Image src={P4} alt="Palads set fra togperron" />
+    <Image src={P1} alt="Billede af Palads udefra" />
+    <Image src={P2} alt="En projektor der viser en film" />
+    <Image src={P3} alt="Røde biografsæder" />
+    <Image src={P4} alt="To personer der ser film med popcorn og sodavand" />
 
 
     <h2>Parkering</h2>
