--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -13,7 +13,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <meta
       name="og:description"
-      content="Info om Palads Biograf"
+      content="Hvad er Palads Biograf udover Københavns ældste biograf? Palads har det største udvalg af film, udover særarrangementer og events."
     />
     <title>{Astro.props.title}</title>
   </head>
