--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,12 +46,13 @@ import P4 from "../assets/images/p4.jpg";
     <p>
       Alt i alt er Palads Biograf ikke kun et sted for at se film, men også en del af Københavns kulturarv og en oplevelse i sig selv.
     </p>
-
+    <div class="grid grid-cols-2 gap-4">
+      <div class="mr-6">
+      <Image src={P3} alt="Røde biografsæder" />
+      </div><div class="mt-4" >
     <Image src={P1} alt="Billede af Palads udefra" />
-    <Image src={P2} alt="En projektor der viser en film" />
-    <Image src={P3} alt="Røde biografsæder" />
     <Image src={P4} alt="To personer der ser film med popcorn og sodavand" />
-
+    </div></div>
 
     <h2>Parkering</h2>
 
