--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,19 +26,19 @@ import P4 from "../assets/images/p4.jpg";
     <h2>Hurtig info om Palads</h2>
 
     <ul>
-      <li class="list-none">
+      <li class="list-disc">
         <strong>Beliggenhed:</strong> Palads Biograf ligger på Axeltorv 9 i København, tæt på Tivoli og Rådhuspladsen. Den centrale placering gør det nemt tilgængeligt for besøgende fra hele byen.
       </li><br/>
-      <li class="list-none">
+      <li class="list-disc">
       <strong>Faciliteter:</strong> Udover de 17 sale og 2.100 sæder tilbyder Palads Biograf moderne faciliteter og komfortable siddepladser. Der er også mulighed for at købe snacks og drikkevarer i biografens foyer.
     </li><br/>
-    <li class="list-none">
+    <li class="list-disc">
     <strong>Program:</strong> Palads Biograf har et bredt udvalg af film til alle aldersgrupper. Du kan forvente at finde alt fra de nyeste Hollywood-blockbusters til uafhængige, internationale film. Derudover arrangerer biografen også forskellige events som særvisninger, maratonvisninger og forpremierer.
   </li><br/>
-  <li class="list-none">
+  <li class="list-disc">
   <strong>Historie:</strong> Som nævnt er Palads Biograf en af Københavns ældste biografer med en historie, der strækker sig over mere end 100 år. Denne historiske arv giver biografen en særlig charme og atmosfære, som mange besøgende værdsætter.
 </li><br/>
-<li class="list-none">
+<li class="list-disc">
 <strong>Renoveringer:</strong> Palads Biograf har gennemgået flere renoveringer gennem årene for at holde sig opdateret med den nyeste teknologi og for at bevare den historiske charme. Senest blev den historiske foyer renoveret for at genskabe atmosfæren fra fortiden samtidig med at den blev opdateret med moderne faciliteter.
 </li>
     </ul>
