--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,9 @@ import P1 from "../assets/images/p1.jpg";
 import P2 from "../assets/images/p2.jpg";
 import P3 from "../assets/images/p3.jpg";
 import P4 from "../assets/images/p4.jpg";
+import P5 from "../assets/images/popcorn.jpg";
 ---
+
 <MainLayout title="Palads Biograf">
   <article class="grid mx-auto container gap-8 pt-8 prose">
     <h1>Palads Biograf</h1>
@@ -13,69 +15,101 @@ import P4 from "../assets/images/p4.jpg";
     <h2>Danmarks største biograf med 17 sale og 2.100 sæder</h2>
 
     <p>
-      Palads byder på Københavns største udvalg af film til alle aldersgrupper. Biografen emmer af historie, men er ikke faldet af på teknikken af den grund. Biografen er fuldt digitaliseret med 4K og 2K projektorer.
+      Palads byder på Københavns største udvalg af film til alle aldersgrupper.
+      Biografen emmer af historie, men er ikke faldet af på teknikken af den
+      grund. Biografen er fuldt digitaliseret med 4K og 2K projektorer.
     </p>
 
     <h2>Københavns ældste biograf</h2>
 
     <p>
-      Med sine mere end 100 år er Palads Københavns ældste biograf og den danner i dag rammen om et varieret udbud af film samt særarrangementer, maratonvisninger, snig- og forpremierer.</p> 
-      <p>Senest er den historiske foyer nænsomt blevet bygget om, så bygningens loft og søjler atter har fået luft omkring sig og foyeren fremstår rummelig som ’i gamle dage’.
+      Med sine mere end 100 år er Palads Københavns ældste biograf og den danner
+      i dag rammen om et varieret udbud af film samt særarrangementer,
+      maratonvisninger, snig- og forpremierer.
+    </p>
+    <p>
+      Senest er den historiske foyer nænsomt blevet bygget om, så bygningens
+      loft og søjler atter har fået luft omkring sig og foyeren fremstår
+      rummelig som ’i gamle dage’.
     </p>
 
     <h2>Hurtig info om Palads</h2>
 
     <ul>
       <li class="list-disc">
-        <strong>Beliggenhed:</strong> Palads Biograf ligger på Axeltorv 9 i København, tæt på Tivoli og Rådhuspladsen. Den centrale placering gør det nemt tilgængeligt for besøgende fra hele byen.
-      </li><br/>
+        <strong>Beliggenhed:</strong> Palads Biograf ligger på Axeltorv 9 i
+        København, tæt på Tivoli og Rådhuspladsen. Den centrale placering gør
+        det nemt tilgængeligt for besøgende fra hele byen.
+      </li><br />
       <li class="list-disc">
-      <strong>Faciliteter:</strong> Udover de 17 sale og 2.100 sæder tilbyder Palads Biograf moderne faciliteter og komfortable siddepladser. Der er også mulighed for at købe snacks og drikkevarer i biografens foyer.
-    </li><br/>
-    <li class="list-disc">
-    <strong>Program:</strong> Palads Biograf har et bredt udvalg af film til alle aldersgrupper. Du kan forvente at finde alt fra de nyeste Hollywood-blockbusters til uafhængige, internationale film. Derudover arrangerer biografen også forskellige events som særvisninger, maratonvisninger og forpremierer.
-  </li><br/>
-  <li class="list-disc">
-  <strong>Historie:</strong> Som nævnt er Palads Biograf en af Københavns ældste biografer med en historie, der strækker sig over mere end 100 år. Denne historiske arv giver biografen en særlig charme og atmosfære, som mange besøgende værdsætter.
-</li><br/>
-<li class="list-disc">
-<strong>Renoveringer:</strong> Palads Biograf har gennemgået flere renoveringer gennem årene for at holde sig opdateret med den nyeste teknologi og for at bevare den historiske charme. Senest blev den historiske foyer renoveret for at genskabe atmosfæren fra fortiden samtidig med at den blev opdateret med moderne faciliteter.
-</li>
+        <strong>Faciliteter:</strong> Udover de 17 sale og 2.100 sæder tilbyder
+        Palads Biograf moderne faciliteter og komfortable siddepladser. Der er
+        også mulighed for at købe snacks og drikkevarer i biografens foyer.
+      </li><br />
+      <li class="list-disc">
+        <strong>Program:</strong> Palads Biograf har et bredt udvalg af film til
+        alle aldersgrupper. Du kan forvente at finde alt fra de nyeste
+        Hollywood-blockbusters til uafhængige, internationale film. Derudover
+        arrangerer biografen også forskellige events som særvisninger,
+        maratonvisninger og forpremierer.
+      </li><br />
+      <li class="list-disc">
+        <strong>Historie:</strong> Som nævnt er Palads Biograf en af Københavns
+        ældste biografer med en historie, der strækker sig over mere end 100 år.
+        Denne historiske arv giver biografen en særlig charme og atmosfære, som
+        mange besøgende værdsætter.
+      </li><br />
+      <li class="list-disc">
+        <strong>Renoveringer:</strong> Palads Biograf har gennemgået flere
+        renoveringer gennem årene for at holde sig opdateret med den nyeste
+        teknologi og for at bevare den historiske charme. Senest blev den
+        historiske foyer renoveret for at genskabe atmosfæren fra fortiden
+        samtidig med at den blev opdateret med moderne faciliteter.
+      </li>
     </ul>
 
     <p>
-      Alt i alt er Palads Biograf ikke kun et sted for at se film, men også en del af Københavns kulturarv og en oplevelse i sig selv.
+      Alt i alt er Palads Biograf ikke kun et sted for at se film, men også en
+      del af Københavns kulturarv og en oplevelse i sig selv.
     </p>
     <div class="grid grid-cols-2 gap-4">
-      <div class="mr-6">
-      <Image src={P3} alt="Røde biografsæder" />
-      </div><div class="mt-4" >
-    <Image src={P1} alt="Billede af Palads udefra" />
-    <Image src={P4} alt="To personer der ser film med popcorn og sodavand" />
-    </div></div>
+      <div class="mt-10 mr-4">
+        <Image src={P3} alt="Røde biografsæder" />
+      </div><div class="">
+        <Image src={P5} alt="Popcorn" />
+        <Image
+          src={P4}
+          alt="To personer der ser film med popcorn og sodavand"
+        />
+      </div>
+    </div>
 
     <h2>Parkering</h2>
 
     <p>
-      <strong>Parkering:</strong> Hos Q-Park Vesterport i Nyropsgade.S-tog: Vesterport station & Københavns Hovedbanegård.
-    <br/>
+      <strong>Parkering:</strong> Hos Q-Park Vesterport i Nyropsgade.S-tog:
+      Vesterport station & Københavns Hovedbanegård.
+      <br />
       <strong>Metro:</strong> Rådhuspladsen & Københavns Hovedbanegård.
-<br/>
+      <br />
       <strong>Regionaltog:</strong> Københavns Hovedbanegård.
     </p>
 
     <h2>Åbningstider</h2>
 
     <p>
-    Vi åbner 30. min før første forestilling.<br/>
-      Mandag - søndag (samt helligdage)</p>
+      Vi åbner 30. min før første forestilling.<br />
+       Mandag - søndag (samt helligdage)
+    </p>
 
-      <h2>Adresse</h2>
-      <p>
-        Nordisk Film Biografer Palads<br/>
-          Axeltorv 9<br/>
-            1609 København V<br/>
-              <a href="mailto:servicepalads@nfbio.dk" target="_blank">Kontakt os på mail!</a></p>
-
+    <h2>Adresse</h2>
+    <p>
+      Nordisk Film Biografer Palads<br />
+       Axeltorv 9<br />
+       1609 København V<br />
+      <a href="mailto:servicepalads@nfbio.dk" target="_blank"
+        >Kontakt os på mail!</a
+      >
+    </p>
   </article>
 </MainLayout>
